@@ -5,6 +5,7 @@ CHANGELOG RoundCube Webmail
 ----------
 - Fix sorting of folders with more than 2 levels (#1485569)
 - Fix search results page jumps in LDAP addressbook (#1485253)
+- Fix empty line before the signature in IE (#1485351)
 
 2008/12/04 (alec)
 ----------
